2004-06-10  Jakub Steiner <jimmac@ximian.com>

	* Gorilla/icons/scalable/filesystems/Makefile.am:
	  fix makefile after Christian ;)

2004-06-10  Jakub Steiner <jimmac@ximian.com>

	* my-computer.svg: remove the duplicate

2004-06-09  Christian Schaller <christian@fluendo.com>

	* fix emblem placements
	* fix makefiles after Jakub :)
	* Add gnome-fs-client to Gorilla

2004-06-09  Jakub Steiner <jimmac@ximian.com>

	* stock_dialog_warning.svg: Do not embed font. Fixes bug #140719

2004-06-09  Jakub Steiner <jimmac@ximian.com>

	* (Gorilla) .. devices/*: proper scaling

2004-06-09  Jakub Steiner <jimmac@ximian.com>

	* (Gorilla) .. devices/gnome-fs-floppy.svg: 3D should suit it

2004-06-09  Jakub Steiner <jimmac@ximian.com>

	* (Gorilla) .. apps/Makefile.am:
	* (Gorilla) .. filesystems/Makefile.am:
	* (Gorilla) .. mimetypes/Makefile.am: symlink fixes

2004-06-08  Jakub Steiner <jimmac@ximian.com>

	* my-computer.svg
	* gnome-terminal.svg: scale fixups

	* accessibility-directory.svg
	* gnome-games.svg: new panel icons

2004-05-05 Christian Schaller <Uraeus@gnome.org>

	* Fixing small issues in Nuvola
	* Adding OpenOffice icons to Nuvola apps directory
	* Give printermanager a Nuvola icon
	* Add sodipodi/inkscape icon to theme
	* Fixed translations

2004-05-03 Christian Schaller <Uraeus@gnome.org>

	* Tons of bugfixes from Josselin Mouette <joss@debian.org>
	* Firefox icon from Tobias Jakobs
	* Suse symlinks from James Ogley
	* Disable translations, they currently break the build

2004-04-19 Christian Schaller <Uraeus@gnome.org>
	
	* Released 0.7

2004-04-18 David Vignoni <davigno@cvs.gnome.org>

	* Nuvola/icons/scalable/stock/: Updated 15 icons.
	* Nuvola/icons/scalable/stock/: Added 1 icons.
	

2004-04-10  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added en_GB to ALL_LINGUAS

2004-03-31 Christian Schaller <Uraues@gnome.org>

	* Added two more icons to Amaranth

2004-03-30 Christian Schaller <Uraeus@gnome.org>

	* Added 5 icons to Amaranth